force-app/main/default/objects/Customer_Insights__dlm/Customer_Insights__dlm.object-meta.xml
<CustomObject>
    <label>Customer_Insights</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Customer_Insights</labelOverride>
        <masterLabel>Customer_Insights</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>