force-app/main/default/objects/Customer_Insights__dlm/fields/avg_prod_hold__c.field-meta.xml
<CustomField>
    <fullName>avg_prod_hold__c</fullName>
    <label>AVG_PROD_HOLD</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AVG_PROD_HOLD</labelOverride>
        <masterLabel>AVG_PROD_HOLD</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>