force-app/main/default/objects/Customer_Insights__dlm/fields/bus_cust_type__c.field-meta.xml
<CustomField>
    <fullName>bus_cust_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BUS_CUST_TYPE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>BUS_CUST_TYPE</labelOverride>
        <masterLabel>BUS_CUST_TYPE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>