force-app/main/default/objects/Customer_Insights__dlm/fields/cc_util__c.field-meta.xml
<CustomField>
    <fullName>cc_util__c</fullName>
    <label>CC_UTIL</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CC_UTIL</labelOverride>
        <masterLabel>CC_UTIL</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>