force-app/main/default/objects/Customer_Insights__dlm/fields/clv__c.field-meta.xml
<CustomField>
    <fullName>clv__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CLV</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CLV</labelOverride>
        <masterLabel>CLV</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>