force-app/main/default/objects/Customer_Insights__dlm/fields/cnt_cc_ofi__c.field-meta.xml
<CustomField>
    <fullName>cnt_cc_ofi__c</fullName>
    <label>CNT_CC_OFI</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CNT_CC_OFI</labelOverride>
        <masterLabel>CNT_CC_OFI</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>