force-app/main/default/objects/Customer_Insights__dlm/fields/customer_no__c.field-meta.xml
<CustomField>
    <fullName>customer_no__c</fullName>
    <label>CUSTOMER_NO</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CUSTOMER_NO</labelOverride>
        <masterLabel>CUSTOMER_NO</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>