force-app/main/default/objects/Customer_Insights__dlm/fields/deposit_both__c.field-meta.xml
<CustomField>
    <fullName>deposit_both__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEPOSIT_BOTH</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>DEPOSIT_BOTH</labelOverride>
        <masterLabel>DEPOSIT_BOTH</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>