force-app/main/default/objects/Customer_Insights__dlm/fields/est_turnover__c.field-meta.xml
<CustomField>
    <fullName>est_turnover__c</fullName>
    <label>EST_TURNOVER</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>EST_TURNOVER</labelOverride>
        <masterLabel>EST_TURNOVER</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>