force-app/main/default/objects/Customer_Insights__dlm/fields/gobiz_elig_cust__c.field-meta.xml
<CustomField>
    <fullName>gobiz_elig_cust__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GOBIZ_ELIG_CUST</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GOBIZ_ELIG_CUST</labelOverride>
        <masterLabel>GOBIZ_ELIG_CUST</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>