force-app/main/default/objects/Customer_Insights__dlm/fields/hi_bal_l12m__c.field-meta.xml
<CustomField>
    <fullName>hi_bal_l12m__c</fullName>
    <label>HI_BAL_L12M</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HI_BAL_L12M</labelOverride>
        <masterLabel>HI_BAL_L12M</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>