force-app/main/default/objects/Customer_Insights__dlm/fields/hi_mth_bal__c.field-meta.xml
<CustomField>
    <fullName>hi_mth_bal__c</fullName>
    <label>HI_MTH_BAL</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HI_MTH_BAL</labelOverride>
        <masterLabel>HI_MTH_BAL</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>