force-app/main/default/objects/Customer_Insights__dlm/fields/hl_ofi_dtl__c.field-meta.xml
<CustomField>
    <fullName>hl_ofi_dtl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HL_OFI_DTL</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>HL_OFI_DTL</labelOverride>
        <masterLabel>HL_OFI_DTL</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>