force-app/main/default/objects/Customer_Insights__dlm/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INDUSTRY</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>INDUSTRY</labelOverride>
        <masterLabel>INDUSTRY</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>