force-app/main/default/objects/Customer_Insights__dlm/fields/kyc_flag__c.field-meta.xml
<CustomField>
    <fullName>kyc_flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC_FLAG</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>KYC_FLAG</labelOverride>
        <masterLabel>KYC_FLAG</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>