force-app/main/default/objects/Customer_Insights__dlm/fields/load_date__c.field-meta.xml
<CustomField>
    <fullName>load_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LOAD_DATE</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>LOAD_DATE</labelOverride>
        <masterLabel>LOAD_DATE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>