force-app/main/default/objects/Customer_Insights__dlm/fields/net_prod_hold_l12m__c.field-meta.xml
<CustomField>
    <fullName>net_prod_hold_l12m__c</fullName>
    <label>NET_PROD_HOLD_L12M</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>NET_PROD_HOLD_L12M</labelOverride>
        <masterLabel>NET_PROD_HOLD_L12M</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>