force-app/main/default/objects/Customer_Insights__dlm/fields/quarter__c.field-meta.xml
<CustomField>
    <fullName>quarter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QUARTER</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QUARTER</labelOverride>
        <masterLabel>QUARTER</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>