force-app/main/default/objects/Customer_Insights__dlm/fields/quick_assist__c.field-meta.xml
<CustomField>
    <fullName>quick_assist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QUICK_ASSIST</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QUICK_ASSIST</labelOverride>
        <masterLabel>QUICK_ASSIST</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>