force-app/main/default/objects/Customer_Insights__dlm/fields/src_snapshot__c.field-meta.xml
<CustomField>
    <fullName>src_snapshot__c</fullName>
    <label>SRC_SNAPSHOT</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SRC_SNAPSHOT</labelOverride>
        <masterLabel>SRC_SNAPSHOT</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>