force-app/main/default/objects/Customer_Insights__dlm/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>STATUS</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>STATUS</labelOverride>
        <masterLabel>STATUS</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>