force-app/main/default/objects/Customer_Insights__dlm/fields/ter__c.field-meta.xml
<CustomField>
    <fullName>ter__c</fullName>
    <label>TER</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TER</labelOverride>
        <masterLabel>TER</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>