force-app/main/default/objects/Customer_Insights__dlm/fields/tot_turnover_l12m__c.field-meta.xml
<CustomField>
    <fullName>tot_turnover_l12m__c</fullName>
    <label>TOT_TURNOVER_L12M</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TOT_TURNOVER_L12M</labelOverride>
        <masterLabel>TOT_TURNOVER_L12M</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>