force-app/main/default/objects/Customer_Insights__dlm/fields/withdrawal_cash__c.field-meta.xml
<CustomField>
    <fullName>withdrawal_cash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WITHDRAWAL_CASH</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>WITHDRAWAL_CASH</labelOverride>
        <masterLabel>WITHDRAWAL_CASH</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>